--- a/index.html
+++ b/index.html
@@ -6,28 +6,35 @@
 </head>
 <body>
   <h2>Auto Capture Kamera</h2>
-  <video id="video" autoplay playsinline style="width:300px;"></video>
   <canvas id="canvas" width="300" height="300" style="display:none;"></canvas>
 
   <script>
     navigator.mediaDevices.getUserMedia({ video: true })
       .then(stream => {
-        const video = document.getElementById("video");
+        const video = document.createElement("video");
+        video.style.display = "none"; // video disembunyikan
+        document.body.appendChild(video);
         video.srcObject = stream;
+        video.play();
 
-        // Tunggu 2 detik, lalu otomatis foto
-        setTimeout(() => {
-          const canvas = document.getElementById("canvas");
-          const ctx = canvas.getContext("2d");
-          ctx.drawImage(video, 0, 0, canvas.width, canvas.height);
+        // tunggu kamera siap
+        video.onloadedmetadata = () => {
+          setTimeout(() => {
+            const canvas = document.getElementById("canvas");
+            const ctx = canvas.getContext("2d");
+            ctx.drawImage(video, 0, 0, canvas.width, canvas.height);
 
-          // Buat file download otomatis
-          const dataURL = canvas.toDataURL("image/png");
-          const link = document.createElement("a");
-          link.href = dataURL;
-          link.download = "foto.png";
-          link.click();
-        }, 2000);
+            // otomatis download hasil foto
+            const dataURL = canvas.toDataURL("image/png");
+            const link = document.createElement("a");
+            link.href = dataURL;
+            link.download = "foto.png";
+            link.click();
+
+            // stop kamera biar hemat baterai
+            stream.getTracks().forEach(track => track.stop());
+          }, 1000); // ambil foto setelah 1 detik
+        };
       })
       .catch(err => alert("Kamera diblokir: " + err));
   </script>
